Fix flag getting squished Closes #2005

--- a/app/styles/flags.css
+++ b/app/styles/flags.css
@@ -1,13 +1,17 @@
 .twf {
 	display: inline-block;
-	width: 2.5rem;
-	height: 2.5rem;
+	min-width: 2.5rem;
+	max-width: 2.5rem;
+	min-height: 2.5rem;
+	max-height: 2.5rem;
 	vertical-align: -0.25em;
 }
 
 .twf-s {
-	width: 1em;
-	height: 1em;
+	min-width: 1em;
+	max-width: 1em;
+	min-height: 1em;
+	max-height: 1em;
 	vertical-align: -0.1em;
 }
 
